<resources>
    <string name="app_name">Calendar</string>
    <!-- 탭 -->
    <string name="홈">홈</string>
    <string name="개인일정">개인 일정</string>
    <string name="그룹일정">그룹 일정</string>
    <!-- 메뉴 -->
    <string name="그룹생성">그룹 생성</string>
    <string name="그룹표시">그룹 표시</string>
    <string name="테마설정">테마 설정</string>
    <string name="설정">설정</string>
    <!-- 탭 표시 -->
    <string name="개인일정보기">개인 일정 보기</string>
    <string name="그룹일정보기">그룹 일정 보기</string>
    <string name="새로운일정">새로운 일정 생성</string>
    <!-- 일정 생성 -->
    <string name="디데이">디데이</string>
    <string name="일정입력">일정을 입력하세요.</string>
    <string name="날짜">날짜</string>
    <string name="하루종일">하루종일</string>
    <string name="시작시간">시작 시간</string>
    <string name="종료시간">종료 시간</string>
    <string name="캘린더종류">캘린더 종류</string>
    <string name="그룹">그룹</string>
    <string name="개인">개인</string>

    <string name="sample">sample</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
