<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Scheduling_MySelf"
    android:background="#FFF">

    <android.support.v7.widget.Toolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|start"
            android:orientation="horizontal">

            <Button
                android:id="@+id/myHome"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/홈" />

            <Button
                android:id="@+id/mySelf"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/개인일정" />

            <Button
                android:id="@+id/myGroup"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/그룹일정" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="435dp"
        android:layout_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintBottom_toTopOf="@+id/RegisterS">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/list_dDay"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/디데이"
                    android:textSize="15sp" />

                <Switch
                    android:id="@+id/select_dDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:checked="true" />
            </LinearLayout>


            <EditText
                android:id="@+id/select_title"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/일정입력"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/list_date"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/날짜"
                    android:textSize="15sp" />

                <DatePicker
                    android:id="@+id/select_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"></DatePicker>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_allDay"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/하루종일"
                    android:textSize="15sp" />

                <Switch
                    android:id="@+id/select_allDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_startTime"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/시작시간"
                    android:textSize="15sp" />

                <TimePicker
                    android:id="@+id/select_startTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_endTime"
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/종료시간"
                    android:textSize="15sp" />

                <TimePicker
                    android:id="@+id/select_endTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:timePickerMode="spinner"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_calendar"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/캘린더종류"
                    android:textSize="15sp" />

                <ToggleButton
                    android:id="@+id/select_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textOff="@string/그룹"
                    android:textOn="@string/개인"
                    android:checked="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/list_group"
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/그룹"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/select_group"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/RegisterS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="17dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/CancelS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_delete" />


</android.support.constraint.ConstraintLayout>