<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/calendar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.Toolbar
            android:id="@+id/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/myHome"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/홈" />

                <Button
                    android:id="@+id/mySelf"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/개인일정" />

                <Button
                    android:id="@+id/myGroup"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/그룹일정" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff">

            <Button
                android:id="@+id/monthPrevious"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:clickable="true"
                android:gravity="center_horizontal"
                app:srcCompat="@android:drawable/arrow_down_float"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="55dp" />

            <TextView
                android:id="@+id/monthText"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:text="MonthView"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="92dp"
                tools:layout_editor_absoluteY="64dp" />


            <Button
                android:id="@+id/monthNext"
                android:layout_width="46dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:clickable="true"
                android:gravity="center_horizontal"
                app:srcCompat="@android:drawable/arrow_up_float"
                tools:layout_editor_absoluteX="338dp"
                tools:layout_editor_absoluteY="55dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sun"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="sun"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/sun"
                android:layout_weight="1"
                android:gravity="center"
                android:text="mon"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/mon"
                android:layout_weight="1"
                android:gravity="center"
                android:text="tue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_toRightOf="@+id/tue"
                android:layout_weight="1"
                android:gravity="center"
                android:text="wed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/wed"
                android:layout_weight="1"
                android:gravity="center"
                android:text="thu"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/thu"
                android:layout_weight="1"
                android:gravity="center"
                android:text="fri"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="55dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/fri"
                android:layout_weight="1"
                android:gravity="center"
                android:text="sat"
                android:textStyle="bold" />

        </LinearLayout>

        <GridView
            android:id="@+id/monthView"
            android:layout_width="match_parent"
            android:layout_height="397dp"
            android:background="#ffbbbbbb"
            android:contentDescription="@string/app_name"
            android:horizontalSpacing="0.7dp"
            android:numColumns="7"
            android:stretchMode="columnWidth"
            android:verticalSpacing="1dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="112dp" />

        <TextView
            android:id="@+id/D-day_text"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="#CCCC"
            android:padding="5dp"
            android:text="D-Day"
            android:textSize="23dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="2dp" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/MakeS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</android.support.constraint.ConstraintLayout>